--- a/composer.json
+++ b/composer.json
@@ -1,41 +1,47 @@
 {
-    "name": "razorpay/razorpay",
-    "description": "Razorpay PHP Client Library",
-    "keywords": ["razorpay", "api", "php", "client"],
-    "authors": [
-        {
-            "name": "Abhay Rana",
-            "email": "nemo@razorpay.com",
-            "homepage": "https://captnemo.in",
-            "role": "Developer"
-        },
-        {
-            "name": "Shashank Kumar",
-            "email": "shashank@razorpay.com",
-            "role": "Developer"
-        }
-    ],
-    "support": {
-        "email": "contact@razorpay.com",
-        "issues": "https://github.com/Razorpay/razorpay-php/issues",
-        "source": "https://github.com/Razorpay/razorpay-php"
-    },
-    "homepage": "https://docs.razorpay.com",
-    "license": "MIT",
+    "name": "google/apiclient",
+    "type": "library",
+    "description": "Client library for Google APIs",
+    "keywords": ["google"],
+    "homepage": "http://developers.google.com/api-client-library/php",
+    "license": "Apache-2.0",
     "require": {
-        "php": ">=7.3",
-        "rmccue/requests": "^2.0",
-        "ext-json": "*"
+        "php": "^7.4|^8.0",
+        "google/auth": "^1.33",
+        "google/apiclient-services": "~0.200",
+        "firebase/php-jwt": "~6.0",
+        "monolog/monolog": "^2.9||^3.0",
+        "phpseclib/phpseclib": "^3.0.34",
+        "guzzlehttp/guzzle": "^6.5.8||^7.4.5",
+        "guzzlehttp/psr7": "^1.9.1||^2.2.1"
     },
     "require-dev": {
-        "raveren/kint": "1.*",
-        "phpunit/phpunit": "^9"
+        "squizlabs/php_codesniffer": "^3.8",
+        "symfony/dom-crawler": "~2.1",
+        "symfony/css-selector": "~2.1",
+        "cache/filesystem-adapter": "^1.1",
+        "phpcompatibility/php-compatibility": "^9.2",
+        "composer/composer": "^1.10.23",
+        "phpspec/prophecy-phpunit": "^2.0",
+        "phpunit/phpunit": "^9.5"
+    },
+    "suggest": {
+        "cache/filesystem-adapter": "For caching certs and tokens (using Google\\Client::setCache)"
     },
     "autoload": {
         "psr-4": {
-            "Razorpay\\Api\\": "src/",
-            "Razorpay\\Tests\\": "tests/"
+            "Google\\": "src/"
         },
-        "files" : ["Deprecated.php"]
+        "files": [
+            "src/aliases.php"
+        ],
+        "classmap": [
+            "src/aliases.php"
+        ]
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-main": "2.x-dev"
+        }
     }
 }
